--- a/app/src/main/res/layout-sw400dp-xxhdpi/nav_header_home.xml
+++ b/app/src/main/res/layout-sw400dp-xxhdpi/nav_header_home.xml
@@ -65,19 +65,19 @@
 
     <Button
         android:id="@+id/sign_out"
-        android:layout_width="50dp"
-        android:layout_height="25dp"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/button_style_2"
         android:text="Sign out"
-        android:textSize="8sp"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/nav_email_text"
         app:layout_constraintHorizontal_bias="0.94"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:text="Sign out"
         app:layout_constraintTop_toTopOf="@+id/nav_name_text"
-        android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/nav_email_text"
-        android:layout_marginBottom="0dp" />
+        tools:text="Sign out" />
 </android.support.constraint.ConstraintLayout>
