--- a/app/src/main/res/layout-sw350dp-xxhdpi/photos_layout.xml
+++ b/app/src/main/res/layout-sw350dp-xxhdpi/photos_layout.xml
@@ -1,14 +1,12 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="246dp"
-    android:layout_marginBottom="2dp"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
-    android:layout_marginTop="2dp"
+    android:layout_height="240dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginTop="8dp"
     android:elevation="0dp"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="24dp">
+    app:cardCornerRadius="12dp">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
