--- a/app/src/main/res/layout-sw400dp-xxhdpi/fragment_home.xml
+++ b/app/src/main/res/layout-sw400dp-xxhdpi/fragment_home.xml
@@ -9,26 +9,28 @@
     android:background="@android:color/white"
     android:clickable="true">
 
+
+
     <Button
         android:id="@+id/register_button"
         android:layout_width="140dp"
         android:layout_height="80dp"
         android:layout_alignBaseline="@+id/album_button"
         android:layout_alignBottom="@+id/album_button"
-        android:layout_toEndOf="@+id/facebook"
         android:background="@drawable/button_style"
         android:elevation="24dp"
         android:fontFamily="monospace"
         android:onClick="onRegisterClick"
         android:text="Register"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.191"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
-        app:layout_constraintVertical_bias="0.20999998" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/homeViewPager"
+        app:layout_constraintVertical_bias="0.13999999" />
 
     <ImageView
         android:id="@+id/register_image"
@@ -72,14 +74,14 @@
         android:fontFamily="monospace"
         android:onClick="onScheduleClick"
         android:text="Schedule"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintHorizontal_bias="0.191"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_button"
-        app:layout_constraintVertical_bias="0.398" />
+        app:layout_constraintVertical_bias="0.413" />
 
     <Button
         android:id="@+id/album_button"
@@ -92,20 +94,21 @@
         android:fontFamily="monospace"
         android:onClick="onAlbumClick"
         android:text="Album"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.784"
+        app:layout_constraintHorizontal_bias="0.756"
         app:layout_constraintLeft_toRightOf="@+id/register_button"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
-        app:layout_constraintVertical_bias="0.20999998"
-        tools:text="Album" />
+        tools:text="Album"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/homeViewPager"
+        app:layout_constraintVertical_bias="0.13999999" />
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/album_button"
         app:layout_constraintHorizontal_bias="1.0"
@@ -122,14 +125,14 @@
         android:background="@drawable/button_style"
         android:elevation="2dp"
         android:onClick="onFacebookClick"
-        android:padding="15dp"
+        android:padding="12dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.39"
+        app:layout_constraintHorizontal_bias="0.417"
         app:layout_constraintLeft_toRightOf="@+id/schedule_button"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/album_button"
-        app:layout_constraintVertical_bias="0.4"
+        app:layout_constraintVertical_bias="0.408"
         app:srcCompat="@drawable/facebook" />
 
     <ImageButton
@@ -139,20 +142,20 @@
         android:background="@drawable/button_style"
         android:elevation="2dp"
         android:onClick="onInstagramClick"
-        android:padding="13dp"
+        android:padding="10dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintHorizontal_bias="0.111"
         app:layout_constraintLeft_toRightOf="@+id/facebook_button"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/album_button"
-        app:layout_constraintVertical_bias="0.4"
+        app:layout_constraintVertical_bias="0.408"
         app:srcCompat="@drawable/instagram" />
 
     <ImageView
         android:id="@+id/imageView12"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
         app:layout_constraintBottom_toBottomOf="@+id/facebook_button"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toRightOf="@+id/schedule_button"
@@ -161,22 +164,18 @@
         app:layout_constraintVertical_bias="0.514"
         app:srcCompat="@drawable/share" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="0dp"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/homeViewPager"
+        android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginEnd="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="2dp"
-        android:background="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginEnd="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
