--- a/app/src/main/res/layout-sw350dp-xxhdpi/activity_home_pic_view.xml
+++ b/app/src/main/res/layout-sw350dp-xxhdpi/activity_home_pic_view.xml
@@ -8,8 +8,8 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/homePicViewPager"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
