--- a/app/src/main/res/layout-sw350dp-xxhdpi/app_bar_home.xml
+++ b/app/src/main/res/layout-sw350dp-xxhdpi/app_bar_home.xml
@@ -32,7 +32,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="120dp"
-                android:layout_height="56dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="56dp"
                 android:layout_marginTop="0dp">
 
