--- a/app/src/main/res/layout-sw350dp-xxhdpi/content_home.xml
+++ b/app/src/main/res/layout-sw350dp-xxhdpi/content_home.xml
@@ -22,8 +22,8 @@
 
     <FrameLayout
         android:id="@+id/frameLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
