--- a/app/src/main/res/layout-sw400dp-xxhdpi/app_bar_home.xml
+++ b/app/src/main/res/layout-sw400dp-xxhdpi/app_bar_home.xml
@@ -30,7 +30,7 @@
                 tools:layout_editor_absoluteY="25dp" />
 
             <android.support.constraint.ConstraintLayout
-                android:layout_width="120dp"
+                android:layout_width="140dp"
                 android:layout_height="56dp"
                 android:layout_marginLeft="56dp"
                 android:layout_marginTop="0dp">
@@ -59,17 +59,15 @@
                     android:textStyle="bold"
                     android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.5" />
+                    app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
             <com.miguelcatalan.materialsearchview.MaterialSearchView
                 android:id="@+id/search_view"
                 android:layout_width="match_parent"
-                android:layout_height="56dp"
+                android:layout_height="match_parent"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="50dp" />
 
