--- a/app/src/main/res/layout-sw400dp-xxhdpi/event_cardview_layout.xml
+++ b/app/src/main/res/layout-sw400dp-xxhdpi/event_cardview_layout.xml
@@ -3,15 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/event_cardView"
-    android:layout_width="180dp"
-    android:layout_height="210dp"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginTop="5dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     android:background="@android:color/white"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="13dp">
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp">
 
 
     <android.support.constraint.ConstraintLayout
@@ -19,66 +16,76 @@
         android:layout_height="match_parent"
         android:background="@android:color/white">
 
+        <ToggleButton
+            android:id="@+id/toggle_notification"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/toggle"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:textOff=""
+            android:textOn=""
+            app:layout_constraintBottom_toBottomOf="@+id/card_heading"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/card_heading"
+            app:layout_constraintTop_toTopOf="@+id/card_heading" />
+
         <ImageView
             android:id="@+id/card_pic"
             android:layout_width="0dp"
-            android:layout_height="130dp"
+            android:layout_height="210dp"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@mipmap/ic_launcher"
-            app:layout_constraintHorizontal_bias="0.0" />
+            app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/card_heading"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             android:fontFamily="serif"
             android:text="tosettext"
             android:textAllCaps="false"
             android:textColor="@android:color/black"
-            android:textSize="17sp"
+            android:textSize="30sp"
             android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/toggle_notification"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/card_pic" />
 
         <TextView
             android:id="@+id/card_subheading"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="2dp"
             android:text="TextView"
             android:textColor="@color/selectedColor"
-            android:textSize="14sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_heading"
-            app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintRight_toLeftOf="@+id/registered"
-            android:layout_marginRight="2dp" />
+            app:layout_constraintEnd_toEndOf="@+id/card_heading"
+            app:layout_constraintStart_toStartOf="@+id/card_heading"
+            app:layout_constraintTop_toBottomOf="@+id/card_heading" />
 
         <ImageView
             android:id="@+id/registered"
-            android:layout_width="55dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="25dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/card_subheading"
+            app:layout_constraintTop_toBottomOf="@+id/card_pic"
             app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/registered" />
 
