--- a/app/src/main/res/layout-sw400dp-xxhdpi/fragment_home.xml
+++ b/app/src/main/res/layout-sw400dp-xxhdpi/fragment_home.xml
@@ -166,7 +166,7 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/homeViewPager"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginEnd="5dp"
         android:layout_marginLeft="5dp"
