--- a/app/src/main/res/layout/fragment_eventtypecommon.xml
+++ b/app/src/main/res/layout/fragment_eventtypecommon.xml
@@ -1,6 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_alignParentEnd="true"
@@ -10,60 +11,65 @@
     android:orientation="vertical"
     tools:context="com.ashishlakhmani.youthopia.fragment.EventTypeCommonFragment">
 
-    <ProgressBar
-        android:id="@+id/progressbar_eventLoading"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="232dp"
-        android:foregroundGravity="center"
-        android:theme="@style/AppTheme.WhiteAccent"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/eventtype_quote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/eventtype_heading"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="13dp"
-        android:shadowColor="@android:color/black"
-        android:text="TextView"
-        android:textAlignment="textStart"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/eventtypeRecyclerView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/eventtype_quote"
-        android:layout_margin="10dp" />
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progressbar_eventLoading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="232dp"
+            android:foregroundGravity="center"
+            android:theme="@style/AppTheme.WhiteAccent"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/eventtype_quote"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/eventtype_heading"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:shadowColor="@android:color/black"
+            android:text="TextView"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/black"
+            android:textSize="10sp"
+            android:textStyle="bold" />
 
 
-    <TextView
-        android:id="@+id/eventtype_heading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:fontFamily="monospace"
-        android:gravity="center"
-        android:shadowDx="-2"
-        android:shadowDy="-2"
-        android:shadowRadius="1"
-        android:text="Cultural Events"
-        android:textAlignment="center"
-        android:textColor="@color/selectedColor"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/eventtypeRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/eventtype_quote"
+            android:layout_marginTop="5dp" />
 
-</RelativeLayout>
+
+        <TextView
+            android:id="@+id/eventtype_heading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:fontFamily="monospace"
+            android:gravity="center"
+            android:shadowDx="-2"
+            android:shadowDy="-2"
+            android:shadowRadius="1"
+            android:text="Cultural Events"
+            android:textAlignment="center"
+            android:textColor="@color/selectedColor"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
+</android.support.v4.widget.SwipeRefreshLayout>
