--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -167,7 +167,7 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/homeViewPager"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="240dp"
         android:layout_marginEnd="5dp"
         android:layout_marginLeft="5dp"
