--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
@@ -17,7 +18,6 @@
         app:showAsAction="always">  <!-- A trick to display icons in overflow menu -->
 
         <menu>
-
             <item
                 android:id="@+id/nav_about"
                 android:orderInCategory="100"
@@ -41,10 +41,9 @@
             <item
                 android:id="@+id/nav_logout"
                 android:orderInCategory="103"
-                android:title="Sign Out"/>
+                android:title="Sign Out" />
 
         </menu>
-
     </item>
 
 </menu>
