--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item><!-- Just to change the colour of navigation icon  -->
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle
+        </item><!-- Just to change the colour of navigation icon  -->
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -46,7 +47,7 @@
         <item name="colorAccent">@color/selectedColor</item>
     </style>  <!-- Progress Bar colour-->
 
-    <style name="toggleButton"  parent="@android:style/Theme.Black">
+    <style name="toggleButton" parent="@android:style/Theme.Black">
         <item name="android:buttonStyleToggle">@android:style/Widget.Button.Toggle</item>
         <item name="android:textOn"></item>
         <item name="android:textOff"></item>
@@ -54,6 +55,6 @@
 
     <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:textColor">@color/selectedColor</item>
-    </style>
+    </style><!-- Alert Dialog Text Color-->
 
 </resources>
